[gd_scene load_steps=14 format=1]

[ext_resource path="res://Credits/Credits.gd" type="Script" id=1]
[ext_resource path="res://Scene3/TileSet3t.tres" type="TileSet" id=2]
[ext_resource path="res://Fonts/palatino-bold-italic.fnt" type="BitmapFont" id=3]
[ext_resource path="res://Fonts/palatino-italic.fnt" type="BitmapFont" id=4]
[ext_resource path="res://Credits/CreditChar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/Round-table.png" type="Texture" id=6]
[ext_resource path="res://UI/Style/Theme-Buttons-little.tres" type="Theme" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="Animation" id=6]

resource/name = "fade"
length = 2.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="Credits" type="Node2D"]

script/script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 32, 32 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 0, 20, 2, 20, 4, 20, 6, 20, 8, 20, 10, 20, 12, 20, 14, 20, 16, 20, 18, 20, 20, 20, 22, 20, 24, 20, 26, 20, 28, 20, 30, 20, 65536, 20, 65538, 20, 65540, 20, 65542, 20, 65544, 20, 65546, 20, 65548, 20, 65550, 20, 65552, 20, 65554, 20, 65556, 20, 65558, 20, 65560, 20, 65562, 20, 65564, 20, 65566, 20, 131072, 20, 131074, 20, 131076, 20, 131078, 20, 131080, 20, 131082, 20, 131084, 20, 131086, 20, 131088, 20, 131090, 20, 131092, 20, 131094, 20, 131096, 20, 131098, 20, 131100, 20, 131102, 20, 196608, 20, 196610, 20, 196612, 20, 196614, 20, 196616, 20, 196618, 20, 196620, 20, 196622, 20, 196624, 20, 196626, 20, 196628, 20, 196630, 20, 196632, 20, 196634, 20, 196636, 20, 196638, 20, 262144, 20, 262146, 20, 262148, 20, 262150, 20, 262152, 20, 262154, 20, 262156, 20, 262158, 20, 262160, 20, 262162, 20, 262164, 20, 262166, 20, 262168, 20, 262170, 20, 262172, 20, 262174, 20, 327680, 20, 327682, 20, 327684, 20, 327686, 20, 327688, 20, 327690, 20, 327692, 20, 327694, 20, 327696, 20, 327698, 20, 327700, 20, 327702, 20, 327704, 20, 327706, 20, 327708, 20, 327710, 20, 393216, 20, 393218, 20, 393220, 20, 393222, 20, 393224, 20, 393226, 20, 393228, 20, 393230, 20, 393232, 20, 393234, 20, 393236, 20, 393238, 20, 393240, 20, 393242, 20, 393244, 20, 393246, 20, 458752, 20, 458754, 20, 458756, 20, 458758, 20, 458760, 20, 458762, 20, 458764, 20, 458766, 20, 458768, 20, 458770, 20, 458772, 20, 458774, 20, 458776, 20, 458778, 20, 458780, 20, 458782, 20, 524288, 1073741843, 524289, 1073741826, 524290, 1073741826, 524291, 1073741826, 524292, 1073741826, 524293, 1073741826, 524294, 1073741826, 524295, 1073741826, 524296, 1073741826, 524297, 1073741826, 524298, 1073741826, 524299, 1073741826, 524300, 1073741826, 524301, 1073741826, 524302, 1073741826, 524303, 1073741826, 524304, 1073741826, 524305, 1073741826, 524306, 1073741826, 524307, 1073741826, 524308, 1073741826, 524309, 1073741826, 524310, 1073741826, 524311, 1073741826, 524312, 1073741826, 524313, 1073741826, 524314, 1073741826, 524315, 1073741826, 524316, 1073741826, 524317, 1073741826, 524318, 1073741826, 524319, 1610612755, 589824, 18, 589825, 1073741827, 589826, 1073741827, 589827, 1073741827, 589828, 1073741827, 589829, 1073741827, 589830, 1073741827, 589831, 1073741827, 589832, 1073741827, 589833, 1073741827, 589834, 1073741827, 589835, 1073741827, 589836, 1073741827, 589837, 1073741827, 589838, 1073741827, 589839, 1073741827, 589840, 1073741827, 589841, 1073741827, 589842, 1073741827, 589843, 1073741827, 589844, 1073741827, 589845, 1073741827, 589846, 1073741827, 589847, 1073741827, 589848, 1073741827, 589849, 1073741827, 589850, 1073741827, 589851, 1073741827, 589852, 1073741827, 589853, 1073741827, 589854, 1073741827, 589855, 536870930, 655360, 18, 655361, 1073741827, 655362, 1073741827, 655363, 1073741827, 655364, 1073741827, 655365, 1073741827, 655366, 1073741827, 655367, 1073741827, 655368, 1073741827, 655369, 1073741827, 655370, 1073741827, 655371, 1073741827, 655372, 1073741827, 655373, 1073741827, 655374, 1073741827, 655375, 1073741827, 655376, 1073741827, 655377, 1073741827, 655378, 1073741827, 655379, 1073741827, 655380, 1073741827, 655381, 1073741827, 655382, 1073741827, 655383, 1073741827, 655384, 1073741827, 655385, 1073741827, 655386, 1073741827, 655387, 1073741827, 655388, 1073741827, 655389, 1073741827, 655390, 1073741827, 655391, 536870930, 720896, 18, 720897, 1073741827, 720898, 1073741827, 720899, 1073741827, 720900, 1073741827, 720901, 1073741827, 720902, 1073741827, 720903, 1073741827, 720904, 1073741827, 720905, 1073741827, 720906, 1073741827, 720907, 1073741827, 720908, 1073741827, 720909, 1073741827, 720910, 1073741827, 720911, 1073741827, 720912, 1073741827, 720913, 1073741827, 720914, 1073741827, 720915, 1073741827, 720916, 1073741827, 720917, 1073741827, 720918, 1073741827, 720919, 1073741827, 720920, 1073741827, 720921, 1073741827, 720922, 1073741827, 720923, 1073741827, 720924, 1073741827, 720925, 1073741827, 720926, 1073741827, 720927, 536870930, 786432, 18, 786433, 1073741827, 786434, 1073741827, 786435, 1073741827, 786436, 1073741827, 786437, 1073741827, 786438, 1073741827, 786439, 1073741827, 786440, 1073741827, 786441, 1073741827, 786442, 1073741827, 786443, 1073741827, 786444, 1073741827, 786445, 1073741827, 786446, 1073741827, 786447, 1073741827, 786448, 1073741827, 786449, 1073741827, 786450, 1073741827, 786451, 1073741827, 786452, 1073741827, 786453, 1073741827, 786454, 1073741827, 786455, 1073741827, 786456, 1073741827, 786457, 1073741827, 786458, 1073741827, 786459, 1073741827, 786460, 1073741827, 786461, 1073741827, 786462, 1073741827, 786463, 536870930, 851968, 18, 851969, 1073741827, 851970, 1073741827, 851971, 1073741827, 851972, 1073741827, 851973, 1073741827, 851974, 1073741827, 851975, 1073741827, 851976, 1073741827, 851977, 1073741827, 851978, 1073741827, 851979, 1073741827, 851980, 1073741827, 851981, 1073741827, 851982, 1073741827, 851983, 1073741827, 851984, 1073741827, 851985, 1073741827, 851986, 1073741827, 851987, 1073741827, 851988, 1073741827, 851989, 1073741827, 851990, 1073741827, 851991, 1073741827, 851992, 1073741827, 851993, 1073741827, 851994, 1073741827, 851995, 1073741827, 851996, 1073741827, 851997, 1073741827, 851998, 1073741827, 851999, 536870930, 917504, 18, 917505, 1073741827, 917506, 1073741827, 917507, 1073741827, 917508, 1073741827, 917509, 1073741827, 917510, 1073741827, 917511, 1073741827, 917512, 1073741827, 917513, 1073741827, 917514, 1073741827, 917515, 1073741827, 917516, 1073741827, 917517, 1073741827, 917518, 1073741827, 917519, 1073741827, 917520, 1073741827, 917521, 1073741827, 917522, 1073741827, 917523, 1073741827, 917524, 1073741827, 917525, 1073741827, 917526, 1073741827, 917527, 1073741827, 917528, 1073741827, 917529, 1073741827, 917530, 1073741827, 917531, 1073741827, 917532, 1073741827, 917533, 1073741827, 917534, 1073741827, 917535, 536870930, 983040, 18, 983041, 1073741827, 983042, 1073741827, 983043, 1073741827, 983044, 1073741827, 983045, 1073741827, 983046, 1073741827, 983047, 1073741827, 983048, 1073741827, 983049, 1073741827, 983050, 1073741827, 983051, 1073741827, 983052, 1073741827, 983053, 1073741827, 983054, 1073741827, 983055, 1073741827, 983056, 1073741827, 983057, 1073741827, 983058, 1073741827, 983059, 1073741827, 983060, 1073741827, 983061, 1073741827, 983062, 1073741827, 983063, 1073741827, 983064, 1073741827, 983065, 1073741827, 983066, 1073741827, 983067, 1073741827, 983068, 1073741827, 983069, 1073741827, 983070, 1073741827, 983071, 536870930, 1048576, 18, 1048577, 1073741827, 1048578, 1073741827, 1048579, 1073741827, 1048580, 1073741827, 1048581, 1073741827, 1048582, 1073741827, 1048583, 1073741827, 1048584, 1073741827, 1048585, 1073741827, 1048586, 1073741827, 1048587, 1073741827, 1048588, 1073741827, 1048589, 1073741827, 1048590, 1073741827, 1048591, 1073741827, 1048592, 1073741827, 1048593, 1073741827, 1048594, 1073741827, 1048595, 1073741827, 1048596, 1073741827, 1048597, 1073741827, 1048598, 1073741827, 1048599, 1073741827, 1048600, 1073741827, 1048601, 1073741827, 1048602, 1073741827, 1048603, 1073741827, 1048604, 1073741827, 1048605, 1073741827, 1048606, 1073741827, 1048607, 536870930, 1114112, 18, 1114113, 1073741827, 1114114, 1073741827, 1114115, 1073741827, 1114116, 1073741827, 1114117, 1073741827, 1114118, 1073741827, 1114119, 1073741827, 1114120, 1073741827, 1114121, 1073741827, 1114122, 1073741827, 1114123, 1073741827, 1114124, 1073741827, 1114125, 1073741827, 1114126, 1073741827, 1114127, 1073741827, 1114128, 1073741827, 1114129, 1073741827, 1114130, 1073741827, 1114131, 1073741827, 1114132, 1073741827, 1114133, 1073741827, 1114134, 1073741827, 1114135, 1073741827, 1114136, 1073741827, 1114137, 1073741827, 1114138, 1073741827, 1114139, 1073741827, 1114140, 1073741827, 1114141, 1073741827, 1114142, 1073741827, 1114143, 536870930, 1179648, 18, 1179649, 1073741827, 1179650, 1073741827, 1179651, 1073741827, 1179652, 1073741827, 1179653, 1073741827, 1179654, 1073741827, 1179655, 1073741827, 1179656, 1073741827, 1179657, 1073741827, 1179658, 1073741827, 1179659, 1073741827, 1179660, 1073741827, 1179661, 1073741827, 1179662, 1073741827, 1179663, 1073741827, 1179664, 1073741827, 1179665, 1073741827, 1179666, 1073741827, 1179667, 1073741827, 1179668, 1073741827, 1179669, 1073741827, 1179670, 1073741827, 1179671, 1073741827, 1179672, 1073741827, 1179673, 1073741827, 1179674, 1073741827, 1179675, 1073741827, 1179676, 1073741827, 1179677, 1073741827, 1179678, 1073741827, 1179679, 536870930 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 109.0
margin/top = 261.0
margin/right = 154.0
margin/bottom = 275.0
custom_fonts/font = ExtResource( 3 )
text = "Credits"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Persons" type="RichTextLabel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 70.0
margin/top = 285.0
margin/right = 631.0
margin/bottom = 585.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="Container" type="Container" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Development" parent="Container" instance=ExtResource( 5 )]

transform/pos = Vector2( 133, 131 )

[node name="Game Design" parent="Container" instance=ExtResource( 5 )]

transform/pos = Vector2( 283, 131 )

[node name="Graphics" parent="Container" instance=ExtResource( 5 )]

transform/pos = Vector2( 433, 131 )

[node name="Music" parent="Container" instance=ExtResource( 5 )]

transform/pos = Vector2( 583, 131 )

[node name="Sounds" parent="Container" instance=ExtResource( 5 )]

transform/pos = Vector2( 733, 131 )

[node name="Thanks" parent="Container" instance=ExtResource( 5 )]

transform/pos = Vector2( 883, 131 )

[node name="MailingList" type="RichTextLabel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 647.0
margin/top = 273.0
margin/right = 1016.0
margin/bottom = 587.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="RoundTable" type="Node2D" parent="."]

[node name="Button" type="Button" parent="RoundTable"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 486.0
margin/top = 15.0
margin/right = 541.0
margin/bottom = 84.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Sprite" type="Sprite" parent="RoundTable/Button"]

transform/pos = Vector2( 28, 33.0001 )
texture = ExtResource( 6 )

[node name="MainMenu" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 7 )
margin/left = 715.0
margin/top = 384.0
margin/right = 727.0
margin/bottom = 404.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="ColorFrame" type="ColorFrame" parent="."]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -17.0
margin/top = -20.0
margin/right = 1056.0
margin/bottom = 632.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorFrame"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fade = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="meta_clicked" from="Persons" to="." method="_on_Persons_meta_clicked"]

[connection signal="meta_clicked" from="MailingList" to="." method="_on_MailingList_meta_clicked"]

[connection signal="pressed" from="RoundTable/Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]


